Сделан Header - меню + адаптив

--- a/index.html
+++ b/index.html
@@ -16,6 +16,119 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header class="navbar navbar_fixed">
+      <div class="container navbar__container">
+        <div class="navbar-wrap">
+          <a href="index.html" class="logo">
+            <img src="img/logo.png" alt="Logo" class="logo__image" />
+          </a>
+          <div class="info navbar__info">
+            <ul class="info-menu">
+              <li class="info-menu__item">
+                <a href="#id1" class="info-menu__link">Статьи</a>
+              </li>
+              <li class="info-menu__item">
+                <a href="#id2" class="info-menu__link">Новости</a>
+              </li>
+              <li class="info-menu__item">
+                <a href="#id3" class="info-menu__link">Горячее</a>
+              </li>
+              <li class="info-menu__item">
+                <a href="#id4" class="info-menu__link">HTML</a>
+              </li>
+              <li class="info-menu__item">
+                <a href="#id5" class="info-menu__link">CSS</a>
+              </li>
+              <li class="info-menu__item">
+                <a href="#id6" class="info-menu__link">JavaScript</a>
+              </li>
+              <li class="info-menu__item">
+                <a href="#id7" class="info-menu__link">Web Design</a>
+              </li>
+            </ul>
+          </div>
+          <button class="button info__button">Оставить заявку</button>
+
+          <button class="button navbar__button">
+            <span class="button__line"></span>
+            <span class="button__line"></span>
+            <span class="button__line"></span>
+          </button>
+          <ul class="info-menu info-menu_mobile">
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id1" class="info-menu__link">Статьи</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id2" class="info-menu__link">Новости</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id3" class="info-menu__link">Горячее</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id4" class="info-menu__link">HTML</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id5" class="info-menu__link">CSS</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id6" class="info-menu__link">JavaScript</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <a href="#id7" class="info-menu__link">Web Design</a>
+            </li>
+            <li class="info-menu__item info-menu__item_mobile-visible">
+              <button
+                class="
+                  button
+                  info-menu__button info-menu__button_mobile-visible
+                "
+              >
+                Оставить заявку
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <section id="id1" style="margin-bottom: 1000px; margin-top: 60px">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet
+      sapiente culpa enim! Cumque, ut itaque. Mollitia eos quia illum placeat
+      officia ipsam vel veritatis exercitationem alias tenetur. Quae optio
+      exercitationem omnis facere itaque quas corporis tempore voluptatum
+      eveniet? Fugit quo sequi recusandae voluptas officiis totam quia et!
+      Blanditiis laboriosam voluptatem sapiente impedit voluptatum molestias a
+      molestiae suscipit culpa sint cumque quibusdam veniam labore odio nostrum
+      cupiditate animi velit dolore, inventore quam architecto repellat?
+      Repudiandae esse non sed incidunt amet hic est fuga odit cumque
+      dignissimos et quo accusantium alias sequi, debitis animi tempora ullam
+      quibusdam aliquid, voluptatibus sit doloribus.
+    </section>
+    <section id="id2" style="margin-bottom: 1000px">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet
+      sapiente culpa enim! Cumque, ut itaque. Mollitia eos quia illum placeat
+      officia ipsam vel veritatis exercitationem alias tenetur. Quae optio
+      exercitationem omnis facere itaque quas corporis tempore voluptatum
+      eveniet? Fugit quo sequi recusandae voluptas officiis totam quia et!
+      Blanditiis laboriosam voluptatem sapiente impedit voluptatum molestias a
+      molestiae suscipit culpa sint cumque quibusdam veniam labore odio nostrum
+      cupiditate animi velit dolore, inventore quam architecto repellat?
+      Repudiandae esse non sed incidunt amet hic est fuga odit cumque
+      dignissimos et quo accusantium alias sequi, debitis animi tempora ullam
+      quibusdam aliquid, voluptatibus sit doloribus.
+    </section>
+    <section id="id3" style="margin-bottom: 1000px">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet
+      sapiente culpa enim! Cumque, ut itaque. Mollitia eos quia illum placeat
+      officia ipsam vel veritatis exercitationem alias tenetur. Quae optio
+      exercitationem omnis facere itaque quas corporis tempore voluptatum
+      eveniet? Fugit quo sequi recusandae voluptas officiis totam quia et!
+      Blanditiis laboriosam voluptatem sapiente impedit voluptatum molestias a
+      molestiae suscipit culpa sint cumque quibusdam veniam labore odio nostrum
+      cupiditate animi velit dolore, inventore quam architecto repellat?
+      Repudiandae esse non sed incidunt amet hic est fuga odit cumque
+      dignissimos et quo accusantium alias sequi, debitis animi tempora ullam
+      quibusdam aliquid, voluptatibus sit doloribus.
+    </section>
     <script defer src="js/jquery-3.6.0.min.js"></script>
     <script defer src="js/main.js"></script>
   </body>
