Разработал 2 секцию "Важные статьи" + адаптив

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </header>
 
-    <section id="id1" class="articles" style="margin-bottom: 1000px">
+    <section id="id1" class="articles">
       <div class="container">
         <div class="articles-wrap">
           <div class="articles__paper articles__paper_active">
@@ -339,18 +339,50 @@
         </div>
       </div>
     </section>
-    <section id="id2" style="margin-bottom: 1000px">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet
-      sapiente culpa enim! Cumque, ut itaque. Mollitia eos quia illum placeat
-      officia ipsam vel veritatis exercitationem alias tenetur. Quae optio
-      exercitationem omnis facere itaque quas corporis tempore voluptatum
-      eveniet? Fugit quo sequi recusandae voluptas officiis totam quia et!
-      Blanditiis laboriosam voluptatem sapiente impedit voluptatum molestias a
-      molestiae suscipit culpa sint cumque quibusdam veniam labore odio nostrum
-      cupiditate animi velit dolore, inventore quam architecto repellat?
-      Repudiandae esse non sed incidunt amet hic est fuga odit cumque
-      dignissimos et quo accusantium alias sequi, debitis animi tempora ullam
-      quibusdam aliquid, voluptatibus sit doloribus.
+    <section id="id2" class="tall" style="margin-bottom: 1000px">
+      <div class="container">
+        <div class="tall-wrap">
+          <a href="#" class="tall-info">
+            <div class="tall-text">
+              25 способов<br />
+              настроить слайдер
+            </div>
+            <div class="tall-image">
+              <img src="img/tall-1.png" alt="" class="tall-image__img" />
+            </div>
+          </a>
+
+          <a href="#" class="tall-info">
+            <div class="tall-text">
+              Главные фишки<br />
+              фрилансера
+            </div>
+            <div class="tall-image">
+              <img src="img/tall-2.png" alt="" class="tall-image__img" />
+            </div>
+          </a>
+
+          <a href="#" class="tall-info">
+            <div class="tall-text">
+              Техника управления<br />
+              временем “Помодоро”
+            </div>
+            <div class="tall-image">
+              <img src="img/tall-3.png" alt="" class="tall-image__img" />
+            </div>
+          </a>
+
+          <a href="#" class="tall-info">
+            <div class="tall-text">
+              Что нужно знать о Git <br />
+              и GitHub
+            </div>
+            <div class="tall-image">
+              <img src="img/tall-4.png" alt="" class="tall-image__img" />
+            </div>
+          </a>
+        </div>
+      </div>
     </section>
     <section id="id3" style="margin-bottom: 1000px">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet
