Разработал 3 секцию Статьи + адаптив

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
       </div>
     </section>
-    <section id="id2" class="tall" style="margin-bottom: 1000px">
+    <section id="id2" class="tall">
       <div class="container">
         <div class="tall-wrap">
           <a href="#" class="tall-info">
@@ -384,18 +384,170 @@
         </div>
       </div>
     </section>
-    <section id="id3" style="margin-bottom: 1000px">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eveniet
-      sapiente culpa enim! Cumque, ut itaque. Mollitia eos quia illum placeat
-      officia ipsam vel veritatis exercitationem alias tenetur. Quae optio
-      exercitationem omnis facere itaque quas corporis tempore voluptatum
-      eveniet? Fugit quo sequi recusandae voluptas officiis totam quia et!
-      Blanditiis laboriosam voluptatem sapiente impedit voluptatum molestias a
-      molestiae suscipit culpa sint cumque quibusdam veniam labore odio nostrum
-      cupiditate animi velit dolore, inventore quam architecto repellat?
-      Repudiandae esse non sed incidunt amet hic est fuga odit cumque
-      dignissimos et quo accusantium alias sequi, debitis animi tempora ullam
-      quibusdam aliquid, voluptatibus sit doloribus.
+    <section id="id3" class="records">
+      <div class="container">
+        <div class="records-wrap">
+          <div class="records-news">
+            <div class="records-news__top">
+              <div class="records-top records-top__one">
+                <div class="records-top__one-top">
+                  <div class="records-top__one-info">
+                    <div class="records-top__one-tag">Статьи</div>
+                    <div class="records-top__one-title">
+                      Вам предложили работу мечты, но вы не можете...
+                    </div>
+                    <div class="records-top__one-subtitle">
+                      Как поступить, если хочется пойти на работу мечты, но она
+                      находится в другом городе. У вас семья и переезжать вы не
+                      готовы.
+                    </div>
+                  </div>
+                  <div class="records-top__one-image">
+                    <img
+                      src="img/records-1.png"
+                      alt=""
+                      class="records-top__one-img"
+                    />
+                  </div>
+                </div>
+                <div class="records-top__one-bottom">
+                  <div class="records-top__avatar">
+                    <div class="records-top__avatar-image">
+                      <img
+                        class="records-top__avatar-img"
+                        src="img/avatar-2.png"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="records-top__avatar-name">Инна Квашова:</div>
+                  <div class="records-top__avatar-title">
+                    Каждый разработчик мечтает переехать в...
+                  </div>
+                  <div class="records-top__avatar-commit">
+                    <svg class="records-top__avatar-commit_icon">
+                      <use xlink:href="img/sprite.svg#comment"></use>
+                    </svg>
+                  </div>
+                  <div class="records-top__avatar-char">342</div>
+                </div>
+              </div>
+              <div class="records-top records-top__two">
+                <div class="records-top__two-image">
+                  <img
+                    src="img/records-2.png"
+                    alt=""
+                    class="records-top__two-img"
+                  />
+                </div>
+                <div class="records-top__two-tag">Популярное</div>
+                <div class="records-top__two-subtitle">Web design</div>
+                <div class="records-top__two-title">Где взять реальные проекты для портфолио</div>
+                <div class="records-top__two-avatar">
+                  <div class="records-top__two-avatar-image">
+                    <img src="img/avatar-3.png"
+                        alt="" class="records-top__two-avatar-img"></img>
+                  </div>
+                  <div class="records-top__two-avatar-title">Сара Женникова</div>
+                  <div class="records-top__two-avatar-data">25 сентября</div>
+                  <div class="records-top__two-avatar-comment">
+                    <svg class="records-top__two-avatar-comment_icon">
+                      <use xlink:href="img/sprite.svg#comment"></use>
+                    </svg>
+                  </div>
+                  <div class="records-top__two-avatar-comment-char">16</div>
+                  <div class="records-top__two-avatar-like">
+                    <svg class="records-top__two-avatar-like_icon">
+                      <use xlink:href="img/sprite.svg#heart"></use>
+                    </svg>
+                  </div>
+                  <div class="records-top__two-avatar-like-char">832</div>
+                </div>
+              </div>
+            </div>
+            <div class="records-news__bottom">
+              <div class="records-news__bottom-one">
+                <div class="records-news__bottom-one-image">
+                  <img src="img/records-3.png" alt="" class="records-news__bottom-one-img">
+                </div>
+                <div class="records-news__bottom-one-title">
+                  20+ инструментов<br> для js-разработчика
+                </div>
+              </div>
+              <div class="records-news__bottom-two">
+                <div class="records-news__bottom-card">
+                  <div class="records-news__bottom-card-title">Удачные референсы</div>
+                  <div class="records-news__bottom-card-text">Как выбрать подходящие исходники, если вы ищите идею для интерфейса</div>
+                  <div class="records-news__bottom-card-date">15 октября</div>
+                </div>
+                
+                <div class="records-news__bottom-card">
+                  <div class="records-news__bottom-card-title">Заказчики</div>
+                  <div class="records-news__bottom-card-text">Как защититься от бесконечных правок на этапе сдачи проекта</div>
+                  <div class="records-news__bottom-card-date">20 октября</div>
+                </div>
+
+                <div class="records-news__bottom-card">
+                  <div class="records-news__bottom-card-title">Работа без стресса — это...</div>
+                  <div class="records-news__bottom-card-text">Обустройте свое рабочее место так, чтобы не испытывать раздражение от скрипучего... </div>
+                  <div class="records-news__bottom-card-date">26 октября</div>
+                </div>
+
+                <div class="records-news__bottom-card">
+                  <div class="records-news__bottom-card-title">Бесплатные методы...</div>
+                  <div class="records-news__bottom-card-text">Как не платить за софт, если у вас есть студенческий билет высшего учебного заведения</div>
+                  <div class="records-news__bottom-card-date">13 октября</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="records-sidebar">
+            <div class="records-sidebar__one">
+              <div class="records-sidebar__one-main">
+              <div class="records-sidebar__one-title">Чек-лист сдачи верстки вашему заказчику</div>
+              <div class="records-sidebar__one-info">PDF, 125 Мб</div>
+            </div>
+              <a href="#" class="records-sidebar__one-save">
+                <svg class="records-sidebar__one-save_icon">
+                  <use xlink:href="img/sprite.svg#download"></use>
+                </svg>
+                <div class="records-sidebar__one-save-text">Скачать</div>
+              </a>
+            </div>
+            <div class="records-sidebar__two">
+              <div class="records-sidebar__two-title">
+                теги
+              </div>
+              <div class="records-sidebar__two-tags">
+                <div class="records-sidebar__two-tag">Forest</div>
+                <div class="records-sidebar__two-tag">Hover Tag</div>
+                <div class="records-sidebar__two-tag">Nature</div>
+                <div class="records-sidebar__two-tag">Recreation</div>
+                <div class="records-sidebar__two-tag">Tent</div>
+                <div class="records-sidebar__two-tag">Fresh air</div>
+                <div class="records-sidebar__two-tag">Summer</div>
+                <div class="records-sidebar__two-tag">Mountains</div>
+                <div class="records-sidebar__two-tag">Wood</div>
+                <div class="records-sidebar__two-tag">Map</div>
+                <div class="records-sidebar__two-tag">Sun</div>
+                <div class="records-sidebar__two-tag">Wild animals</div>
+                <div class="records-sidebar__two-tag">Night</div>
+
+
+
+              </div>
+            </div>
+            <div class="records-sidebar__three">
+              <div class="records-sidebar__three-title">Наши соцсети</div>
+              <div class="records-sidebar__three-soc">
+                <img src="img/fb.png" alt="" class="records-sidebar__three-fb">
+                <img src="img/tw.png" alt="" class="records-sidebar__three-tw">
+                <img src="img/yt.png" alt="" class="records-sidebar__three-yt">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <script defer src="js/jquery-3.6.0.min.js"></script>
     <script defer src="js/main.js"></script>
