Разработал 4 секцию + адаптив

--- a/index.html
+++ b/index.html
@@ -549,6 +549,24 @@
         </div>
       </div>
     </section>
+    <section class="paper">
+      <div class="paper-wrap">
+      <div class="paper-image">
+        <img src="img/paper.png" alt="" class="paper-img">
+      </div>
+      <!-- <div class="container"> -->
+        <div class="paper-info">
+<div class="paper-title">Расследование недели: сколько<br> зарабатывает веб разработчик в Москве</div>
+      <div class="button paper-button">Читать статью
+        <svg class="paper-button_icon">
+          <use xlink:href="img/sprite.svg#arrow-right"></use>
+        </svg>
+      </div>
+      </div>
+      <!-- </div> -->
+      
+      </div>
+    </section>
     <script defer src="js/jquery-3.6.0.min.js"></script>
     <script defer src="js/main.js"></script>
   </body>
