Разработал секцию подписки + адаптив

--- a/index.html
+++ b/index.html
@@ -977,11 +977,19 @@
                 <div class="newspaper__right-bottom-item-subtitle">Какие плагины помогут быстро создать галерею, выпадающие списки или окна</div>
                 <div class="newspaper__right-bottom-item-date">14 октября</div>
               </div>
-              
             </div>
-
           </div>
-
+        </div>
+      </div>
+    </section>
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe__wrap">
+          <div class="subscribe__title">Подпишитесь на нашу рассылку</div>
+          <form action="#" class="subscribe__subscription">
+            <input type="email" class="subscribe__input" placeholder="Email" name="email">
+            <button class="button subscribe__button">Подписаться</button>
+          </form>
         </div>
       </div>
     </section>
