Правка меню - скролл на адаптиве, подсветка активного пункта

--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <title>Universal</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto+Slab:wght@700&display=swap"
-      rel="stylesheet"
-    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -551,7 +545,7 @@
       </div>
     </section>
 
-    <section class="paper">
+    <section id="id4" class="paper">
       <div class="paper-wrap">
       <div class="paper-image">
         <img src="img/paper.png" alt="" class="paper-img">
@@ -870,7 +864,7 @@
         </div>
       </div>
     </section>
-    <section class="newspaper">
+    <section id="id5" class="newspaper">
       <div class="container">
         <div class="newspaper-wrap">
           <div class="newspaper__left">
@@ -982,7 +976,7 @@
         </div>
       </div>
     </section>
-    <section class="subscribe">
+    <section id="id6" class="subscribe">
       <div class="container">
         <div class="subscribe__wrap">
           <div class="subscribe__title">Подпишитесь на нашу рассылку</div>
@@ -993,7 +987,7 @@
         </div>
       </div>
     </section>
-    <section class="footer">
+    <section id="id7" class="footer">
       <div class="container">
         <div class="footer-wrap">
           <div class="footer__navigation">
